src/generated/LanguageParser.java
// Generated from C:/Users/ASUS/Desktop/cloned compiler/compiler-project-2/grammers\LanguageParser.g4 by ANTLR 4.9.2
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PAGE=1, CONTROLLER=2, EXTENDS=3, CONTROLES=4, HEAD=5, IF=6, CHECK_AUTH=7, 
		CHECK_VALID=8, CHECK_ROLE=9, REDIRECT=10, TEXT=11, IMAGE=12, SEMI_COLON=13, 
		LIST=14, TABLE=15, BUTTON=16, HEADER=17, BODY=18, BOOLEAN=19, CASE=20, 
		METHOD=21, DEFAULT=22, FORM=23, TEXT_FIELD=24, DATE=25, CHECKBOX=26, SELCTION=27, 
		RADIO=28, SWITCH=29, LINK=30, AT_AUTH=31, AT_GUEST=32, AT_ROLE=33, AT_INVERSE_ROLE=34, 
		AT_RAW_PHP=35, AT_SECTION=36, AT_YIELD=37, FOR=38, ELSE=39, AT_END_AUTH=40, 
		AT_END_GUEST=41, AT_END_ROLE=42, AT_END_INVERSE_ROLE=43, AT_END_SECTION=44, 
		SHARED_DATA=45, FORM_DATA=46, BRACKET_OPEN=47, BRACKET_CLOSE=48, SQUARE_OPEN=49, 
		SQUARE_CLOSE=50, CURLEY_BRACKET_OPEN=51, CURLEY_BRACKET_CLOSE=52, COMMA=53, 
		COLON=54, OPERATOR_TWO_OPERAND=55, CONDITIONAL_CONCAT_OPERATOR=56, ONE_LOGICAL_OPERAND=57, 
		ONE_VALUABLE_OPERAND=58, ADDITIVE_OPERATOR=59, MULTIPLICATIVE_OPERATOR=60, 
		EQUAL=61, AT=62, ARROW=63, ID=64, WHITESPACE=65, DECIMAL=66, HEXCHARS=67, 
		STRING=68, CHAR=69, AT_END_RAW_PHP=70;
	public static final int
		RULE_program = 0, RULE_start_page = 1, RULE_page = 2, RULE_head = 3, RULE_title = 4, 
		RULE_body_element = 5, RULE_statement = 6, RULE_element = 7, RULE_if_statement = 8, 
		RULE_elsebody = 9, RULE_switch_statement = 10, RULE_switch_body = 11, 
		RULE_switch_case = 12, RULE_switch_default = 13, RULE_variable_declaration = 14, 
		RULE_shared_data_declaration = 15, RULE_for_statement = 16, RULE_for_index = 17, 
		RULE_authentication = 18, RULE_authorization = 19, RULE_rawphp = 20, RULE_layoutInheritance = 21, 
		RULE_out_element = 22, RULE_text = 23, RULE_text_attributes = 24, RULE_image = 25, 
		RULE_image_attributes = 26, RULE_button = 27, RULE_button_attributes = 28, 
		RULE_list = 29, RULE_list_attributes = 30, RULE_table = 31, RULE_link = 32, 
		RULE_link_attributes = 33, RULE_body_options = 34, RULE_in_element = 35, 
		RULE_form = 36, RULE_form_attributes = 37, RULE_form_body = 38, RULE_text_field = 39, 
		RULE_text_field_attributes = 40, RULE_date = 41, RULE_date_attributes = 42, 
		RULE_check_box = 43, RULE_check_box_attributes = 44, RULE_selection = 45, 
		RULE_selection_attribute = 46, RULE_selection_body = 47, RULE_option = 48, 
		RULE_radio = 49, RULE_extra_attributes = 50, RULE_array_value = 51, RULE_table_body = 52, 
		RULE_table_header_body = 53, RULE_controller = 54, RULE_controller_body_element = 55, 
		RULE_array = 56, RULE_map_value = 57, RULE_map = 58, RULE_expression = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "start_page", "page", "head", "title", "body_element", "statement", 
			"element", "if_statement", "elsebody", "switch_statement", "switch_body", 
			"switch_case", "switch_default", "variable_declaration", "shared_data_declaration", 
			"for_statement", "for_index", "authentication", "authorization", "rawphp", 
			"layoutInheritance", "out_element", "text", "text_attributes", "image", 
			"image_attributes", "button", "button_attributes", "list", "list_attributes", 
			"table", "link", "link_attributes", "body_options", "in_element", "form", 
			"form_attributes", "form_body", "text_field", "text_field_attributes", 
			"date", "date_attributes", "check_box", "check_box_attributes", "selection", 
			"selection_attribute", "selection_body", "option", "radio", "extra_attributes", 
			"array_value", "table_body", "table_header_body", "controller", "controller_body_element", 
			"array", "map_value", "map", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'page'", "'controller'", "'extends'", "'controles'", "'head'", 
			"'if'", "'checkAuthenticated'", "'checkValid'", "'checkRole'", "'redirect'", 
			"'text'", "'image'", "';'", "'list'", "'table'", "'button'", "'header'", 
			"'body'", null, "'case'", null, "'dafaultl'", "'form'", "'textField'", 
			"'date'", "'checkbox'", "'selection'", "'radio'", "'switch'", "'link'", 
			"'@auth'", "'@guest'", "'@role'", "'@inverserole'", "'@rawphp'", "'@section'", 
			"'@yield'", "'for'", null, "'@endauth'", "'@endguest'", "'@endrole'", 
			"'@endinverserole'", "'@endsection'", "'shared_data'", "'form_data'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "','", "':'", null, null, "'!'", 
			null, null, null, "'='", "'@'", "'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PAGE", "CONTROLLER", "EXTENDS", "CONTROLES", "HEAD", "IF", "CHECK_AUTH", 
			"CHECK_VALID", "CHECK_ROLE", "REDIRECT", "TEXT", "IMAGE", "SEMI_COLON", 
			"LIST", "TABLE", "BUTTON", "HEADER", "BODY", "BOOLEAN", "CASE", "METHOD", 
			"DEFAULT", "FORM", "TEXT_FIELD", "DATE", "CHECKBOX", "SELCTION", "RADIO", 
			"SWITCH", "LINK", "AT_AUTH", "AT_GUEST", "AT_ROLE", "AT_INVERSE_ROLE", 
			"AT_RAW_PHP", "AT_SECTION", "AT_YIELD", "FOR", "ELSE", "AT_END_AUTH", 
			"AT_END_GUEST", "AT_END_ROLE", "AT_END_INVERSE_ROLE", "AT_END_SECTION", 
			"SHARED_DATA", "FORM_DATA", "BRACKET_OPEN", "BRACKET_CLOSE", "SQUARE_OPEN", 
			"SQUARE_CLOSE", "CURLEY_BRACKET_OPEN", "CURLEY_BRACKET_CLOSE", "COMMA", 
			"COLON", "OPERATOR_TWO_OPERAND", "CONDITIONAL_CONCAT_OPERATOR", "ONE_LOGICAL_OPERAND", 
			"ONE_VALUABLE_OPERAND", "ADDITIVE_OPERATOR", "MULTIPLICATIVE_OPERATOR", 
			"EQUAL", "AT", "ARROW", "ID", "WHITESPACE", "DECIMAL", "HEXCHARS", "STRING", 
			"CHAR", "AT_END_RAW_PHP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LanguageParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Start_pageContext start_page() {
			return getRuleContext(Start_pageContext.class,0);
		}
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public List<ControllerContext> controller() {
			return getRuleContexts(ControllerContext.class);
		}
		public ControllerContext controller(int i) {
			return getRuleContext(ControllerContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageParserVisitor ) return ((LanguageParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			start_page();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAGE) {
				{
				{
				setState(121);
				page();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONTROLLER) {
				{
				{
				setState(127);
				controller();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_pageContext extends ParserRuleContext {
		public PageContext page() {
			return getRuleContext(PageContext.class,0);
		}
		public Start_pageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).enterStart_page(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).exitStart_page(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageParserVisitor ) return ((LanguageParserVisitor<? extends T>)visitor).visitStart_page(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_pageContext start_page() throws RecognitionException {
		Start_pageContext _localctx = new Start_pageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			page();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public TerminalNode PAGE() { return getToken(LanguageParser.PAGE, 0); }
		public List<TerminalNode> ID() { return getTokens(LanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LanguageParser.ID, i);
		}
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public TerminalNode CURLEY_BRACKET_OPEN() { return getToken(LanguageParser.CURLEY_BRACKET_OPEN, 0); }
		public TerminalNode CURLEY_BRACKET_CLOSE() { return getToken(LanguageParser.CURLEY_BRACKET_CLOSE, 0); }
		public TerminalNode EXTENDS() { return getToken(LanguageParser.EXTENDS, 0); }
		public List<Body_elementContext> body_element() {
			return getRuleContexts(Body_elementContext.class);
		}
		public Body_elementContext body_element(int i) {
			return getRuleContext(Body_elementContext.class,i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageParserVisitor ) return ((LanguageParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(PAGE);
			setState(136);
			match(ID);
			setState(137);
			head();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(138);
				match(EXTENDS);
				setState(139);
				match(ID);
				}
			}

			setState(142);
			match(CURLEY_BRACKET_OPEN);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (IF - 6)) | (1L << (CHECK_AUTH - 6)) | (1L << (CHECK_VALID - 6)) | (1L << (CHECK_ROLE - 6)) | (1L << (TEXT - 6)) | (1L << (IMAGE - 6)) | (1L << (LIST - 6)) | (1L << (TABLE - 6)) | (1L << (BUTTON - 6)) | (1L << (BOOLEAN - 6)) | (1L << (FORM - 6)) | (1L << (TEXT_FIELD - 6)) | (1L << (DATE - 6)) | (1L << (CHECKBOX - 6)) | (1L << (SELCTION - 6)) | (1L << (RADIO - 6)) | (1L << (SWITCH - 6)) | (1L << (LINK - 6)) | (1L << (AT_AUTH - 6)) | (1L << (AT_GUEST - 6)) | (1L << (AT_ROLE - 6)) | (1L << (AT_INVERSE_ROLE - 6)) | (1L << (AT_RAW_PHP - 6)) | (1L << (AT_SECTION - 6)) | (1L << (AT_YIELD - 6)) | (1L << (FOR - 6)) | (1L << (SHARED_DATA - 6)) | (1L << (FORM_DATA - 6)) | (1L << (BRACKET_OPEN - 6)) | (1L << (SQUARE_OPEN - 6)) | (1L << (CURLEY_BRACKET_OPEN - 6)) | (1L << (ONE_LOGICAL_OPERAND - 6)) | (1L << (ONE_VALUABLE_OPERAND - 6)) | (1L << (AT - 6)) | (1L << (DECIMAL - 6)) | (1L << (STRING - 6)) | (1L << (CHAR - 6)))) != 0)) {
				{
				{
				setState(143);
				body_element();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(CURLEY_BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadContext extends ParserRuleContext {
		public TerminalNode HEAD() { return getToken(LanguageParser.HEAD, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(LanguageParser.BRACKET_OPEN, 0); }
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(LanguageParser.BRACKET_CLOSE, 0); }
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).exitHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageParserVisitor ) return ((LanguageParserVisitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_head);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(HEAD);
			setState(152);
			match(BRACKET_OPEN);
			setState(153);
			title();
			setState(154);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(LanguageParser.STRING, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageParserVisitor ) return ((LanguageParserVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Body_elementContext extends ParserRuleContext {
		public In_elementContext in_element() {
			return getRuleContext(In_elementContext.class,0);
		}
		public Out_elementContext out_element() {
			return getRuleContext(Out_elementContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public AuthenticationContext authentication() {
			return getRuleContext(AuthenticationContext.class,0);
		}
		public AuthorizationContext authorization() {
			return getRuleContext(AuthorizationContext.class,0);
		}
		public LayoutInheritanceContext layoutInheritance() {
			return getRuleContext(LayoutInheritanceContext.class,0);
		}
		public Body_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).enterBody_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).exitBody_element(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageParserVisitor ) return ((LanguageParserVisitor<? extends T>)visitor).visitBody_element(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Body_elementContext body_element() throws RecognitionException {
		Body_elementContext _localctx = new Body_elementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body_element);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FORM:
			case TEXT_FIELD:
			case DATE:
			case CHECKBOX:
			case SELCTION:
			case RADIO:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				in_element();
				}
				break;
			case TEXT:
			case IMAGE:
			case LIST:
			case TABLE:
			case BUTTON:
			case LINK:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				out_element();
				}
				break;
			case IF:
			case CHECK_AUTH:
			case CHECK_VALID:
			case CHECK_ROLE:
			case BOOLEAN:
			case SWITCH:
			case AT_RAW_PHP:
			case FOR:
			case SHARED_DATA:
			case FORM_DATA:
			case BRACKET_OPEN:
			case SQUARE_OPEN:
			case CURLEY_BRACKET_OPEN:
			case ONE_LOGICAL_OPERAND:
			case ONE_VALUABLE_OPERAND:
			case AT:
			case DECIMAL:
			case STRING:
			case CHAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				statement();
				}
				break;
			case AT_AUTH:
			case AT_GUEST:
				enterOuterAlt(_localctx, 4);
				{
				setState(161);
				authentication();
				}
				break;
			case AT_ROLE:
			case AT_INVERSE_ROLE:
				enterOuterAlt(_localctx, 5);
				{
				setState(162);
				authorization();
				}
				break;
			case AT_SECTION:
			case AT_YIELD:
				enterOuterAlt(_localctx, 6);
				{
				setState(163);
				layoutInheritance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Switch_statementContext switch_statement() {
			return getRuleContext(Switch_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Shared_data_declarationContext shared_data_declaration() {
			return getRuleContext(Shared_data_declarationContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RawphpContext rawphp() {
			return getRuleContext(RawphpContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageParserListener ) ((LanguageParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageParserVisitor ) return ((LanguageParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}
